k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forum-app
  namespace: forum
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forum
  template:
    metadata:
      labels:
        app: forum
    spec:
      containers:
        - name: forum
          image: maxtech470/project101:v1.0.1
          ports:
            - containerPort: 8080
